--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ import { Icon } from 'astro-icon/components'
 				aria-hidden="true"
 				width="32"
 				height="32"
-				name="social/youtube"
+				name="logos/youtube-icon"
 				></icon
 			>
 		</a>
