--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,13 +8,13 @@ import { Icon } from 'astro-icon/components'
 	<div class="social-links">
 		<a href="https://www.youtube.com/@nexusrealmstudios" target="_blank">
 			<span class="sr-only">Subscribe To NexusRealm On YouTube</span>
-			<icon
+			<svg
 				viewBox="0 0 16 16"
 				aria-hidden="true"
 				width="32"
 				height="32"
-				name="logos:youtube-icon"
-				></icon
+				astro-icon="social/youtube"
+				></svg
 			>
 		</a>
 		<a href="https://twitter.com/NexusRealm2024" target="_blank">
