--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
 const today = new Date();
+const props = Astro.props
 import { Icon } from 'astro-icon/components'
 ---
 
@@ -9,14 +10,15 @@ import { Icon } from 'astro-icon/components'
 		<a href="https://www.youtube.com/@nexusrealmstudios" target="_blank">
 			<span class="sr-only">Subscribe To NexusRealm On YouTube</span>
 			<svg
-				viewBox="0 0 16 16"
+				viewBox="0 0 20 20"
+				xmlns="http://www.w3.org/2000/svg"
 				aria-hidden="true"
 				width="32"
 				height="32"
 				astro-icon="social/youtube"
 				><path
 					fill="currentColor"
-					d="M250.346 28.075A32.18 32.18 0 0 0 227.69 5.418C207.824 0 127.87 0 127.87 0S47.912.164 28.046 5.582A32.18 32.18 0 0 0 5.39 28.24c-6.009 35.298-8.34 89.084.165 122.97a32.18 32.18 0 0 0 22.656 22.657c19.866 5.418 99.822 5.418 99.822 5.418s79.955 0 99.82-5.418a32.18 32.18 0 0 0 22.657-22.657c6.338-35.348 8.291-89.1-.164-123.134"
+					d="M11.603 9.833L9.357 8.785C9.161 8.694 9 8.796 9 9.013v1.974c0 .217.161.319.357.228l2.245-1.048c.197-.092.197-.242.001-.334M10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6s9.6-4.298 9.6-9.6S15.302.4 10 .4m0 13.5c-4.914 0-5-.443-5-3.9s.086-3.9 5-3.9s5 .443 5 3.9s-.086 3.9-5 3.9"
 				></path></svg
 			>
 		</a>
